# Templates

./: .gitignore  .gitignore~  README.md  README.md~
Ant-Framework/: build.xml
EGL-Headless/: Makefile  common.h  format.kai.list  format.list  mainEGL.cpp  mainGLFW.cpp
EGL-Headless/lib/: Makefile  mesh.cpp  mesh.h  quickgl.cpp  quickgl.h
EGL-Headless/models/: fighter.dae  monkey.dae  monkey2.dae  skateboard.dae  trashbin.dae
GLFW-Framework/: Makefile  main.cpp
GLUT/: Makefile  glut_template.cpp
GLUT-Framework/: Makefile  main.cpp
LaTex-University/: README.md
LaTex-University/ANU_CS/: Makefile  main.tex  main.toc
LaTex-University/UTA_CS/: JS.sty  JSASGN.sty  JSPPT.sty
LaTex-University/UTA_CS/AsgnTemplate/: main.tex
LaTex-University/UTA_CS/DocTemplate/: Makefile  main.tex
LaTex-University/UTA_CS/PPtTemplate/: Makefile  main.tex
LaTex-University/iccv2011AuthorKit/latex/: main.aux
LaTex-University/iccv2011AuthorKit/word/: egpaper_iccv11_final.doc  egpaper_iccv11_for_review.doc
LaTex-University/textbook/: LaTeX Beginner's Guide.rar
Mini-Ogre/: CMakeLists.txt  Makefile  MiniOgre  miniogre.cfg  plugins.cfg  resources.cfg
Mini-Ogre/cmake/: FindCEGUI.cmake
Mini-Ogre/src/: MiniFrameListener.h  MiniKeyListener.h  MiniMouseListener.h  main.cpp
Node-Express/: README.md  app.js  package.json  routes.js
Node-Express/views/: index.jade  layout.jade  layout.jade~  page.jade
Ogre-Application/: CMakeLists.txt  Makefile
Ogre-Application/src/: BaseApplication.cpp
Ogre-Framework/: CMakeLists.txt  Makefile
(+10 files in other folders)
