CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(MiniOgre)

SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} $ENV{OGRE_HOME}/lib/OGRE/cmake ${PROJECT_SOURCE_DIR}/cmake)

FIND_PACKAGE(OGRE REQUIRED)
FIND_PACKAGE(OIS REQUIRED)
FIND_PACKAGE(CEGUI REQUIRED)

INCLUDE_DIRECTORIES(
    ${OGRE_INCLUDE_DIR}
    ${OIS_INCLUDE_DIR}
    ${CEGUI_INCLUDE_DIR}
)

# ADD_SUBDIRECTORY(src)
FILE(GLOB CppSource src/*.cpp src/*.hpp)
ADD_EXECUTABLE(MiniOgre ${CppSource})

TARGET_LINK_LIBRARIES(MiniOgre
    ${OGRE_LIBRARIES}
    ${OIS_LIBRARIES}
    ${CEGUI_LIBRARIES}
)

